[gd_scene load_steps=5 format=3 uid="uid://badtpfq4swfwd"]

[ext_resource type="Script" path="res://scripts/menus/play_menu.gd" id="1_2fhuk"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_nqmi5"]
[ext_resource type="Script" path="res://scripts/menus/start_menu.gd" id="2_ufbnd"]
[ext_resource type="Script" path="res://scripts/menus/scoreboard.gd" id="3_l42sp"]

[node name="Game" type="Node2D"]
script = ExtResource("1_nqmi5")

[node name="StartMenu" type="Node2D" parent="."]
script = ExtResource("2_ufbnd")

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu"]
offset_left = 349.0
offset_top = 185.0
offset_right = 446.0
offset_bottom = 328.0
theme_override_constants/separation = 25

[node name="Play" type="Button" parent="StartMenu/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Scoreboard" type="Button" parent="StartMenu/VBoxContainer"]
layout_mode = 2
text = "Scoreboard"

[node name="Credits" type="Button" parent="StartMenu/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Play" type="Node2D" parent="."]
visible = false
script = ExtResource("1_2fhuk")

[node name="VBoxContainer" type="VBoxContainer" parent="Play"]
offset_left = 373.0
offset_top = 221.0
offset_right = 445.0
offset_bottom = 364.0
theme_override_constants/separation = 17

[node name="Easy" type="Button" parent="Play/VBoxContainer"]
layout_mode = 2
text = "Easy"

[node name="Medium" type="Button" parent="Play/VBoxContainer"]
layout_mode = 2
text = "Medium"

[node name="Hard" type="Button" parent="Play/VBoxContainer"]
layout_mode = 2
text = "Hard"

[node name="Return" type="Button" parent="Play/VBoxContainer"]
layout_mode = 2
text = "Return"

[node name="Scoreboard" type="Node2D" parent="."]
visible = false
script = ExtResource("3_l42sp")

[node name="Scores" type="VScrollBar" parent="Scoreboard"]
offset_left = 327.0
offset_top = 185.0
offset_right = 349.0
offset_bottom = 469.0
step = 13.78
page = 5.835

[node name="VBoxContainer" type="VBoxContainer" parent="Scoreboard/Scores"]
layout_mode = 0
offset_right = 159.0
offset_bottom = 40.0

[node name="Credits" type="Node2D" parent="."]
visible = false

[node name="Win" type="Node" parent="."]

[connection signal="pressed" from="StartMenu/VBoxContainer/Play" to="StartMenu" method="_on_play_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/Scoreboard" to="StartMenu" method="_on_scoreboard_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/Credits" to="StartMenu" method="_on_credits_pressed"]
[connection signal="pressed" from="Play/VBoxContainer/Easy" to="Play" method="_on_easy_pressed"]
[connection signal="pressed" from="Play/VBoxContainer/Medium" to="Play" method="_on_medium_pressed"]
[connection signal="pressed" from="Play/VBoxContainer/Hard" to="Play" method="_on_hard_pressed"]
[connection signal="pressed" from="Play/VBoxContainer/Return" to="Play" method="_on_return_pressed"]
